// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button in default state matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .sc-AykKD > div,
.c0:focus :not(:disabled) .sc-AykKD > div {
  background-color: white;
}

.c0:hover :not(:disabled) .sc-AykKE.sc-AykKE,
.c0:focus :not(:disabled) .sc-AykKE.sc-AykKE {
  fill: white;
}

.c0 .sc-AykKD > div {
  background-color: #fff;
}

.c0 .sc-AykKE {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #fff;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="default"
  variant="primary"
>
  text
</button>
`;

exports[`Button in loading state matches snapshot 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  text-align: center;
  margin-top: 8px;
  margin-bottom: 8px;
}

.c1 > div {
  background-color: #f4f4f4;
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 100%;
  display: inline-block;
  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
}

.c1 > div:nth-child(1) {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.c1 > div:nth-child(2) {
  -webkit-animation-delay: -0.15s;
  animation-delay: -0.15s;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: no-drop;
  line-height: 1.25rem;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .c2 > div,
.c0:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c0:hover :not(:disabled) .sc-AykKE.sc-AykKE,
.c0:focus :not(:disabled) .sc-AykKE.sc-AykKE {
  fill: white;
}

.c0 .c2 > div {
  background-color: #fff;
}

.c0 .sc-AykKE {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #fff;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="default"
  disabled=""
  variant="primary"
>
  <span
    class="c1 c2 "
  >
    <div />
    <div />
    <div />
  </span>
</button>
`;

exports[`Primary Button as "default" color variant matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .sc-AykKD > div,
.c0:focus :not(:disabled) .sc-AykKD > div {
  background-color: white;
}

.c0:hover :not(:disabled) .sc-AykKE.sc-AykKE,
.c0:focus :not(:disabled) .sc-AykKE.sc-AykKE {
  fill: white;
}

.c0 .sc-AykKD > div {
  background-color: #fff;
}

.c0 .sc-AykKE {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #fff;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="default"
  variant="primary"
>
  text
</button>
`;

exports[`Primary Button as "highlight" color variant matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #2a2a2a;
  background-color: #fff;
  border-color: #fff;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled) .sc-AykKD > div,
.c0:focus :not(:disabled) .sc-AykKD > div {
  background-color: white;
}

.c0:hover :not(:disabled) .sc-AykKE.sc-AykKE,
.c0:focus :not(:disabled) .sc-AykKE.sc-AykKE {
  fill: white;
}

.c0 .sc-AykKD > div {
  background-color: #2a2a2a;
}

.c0 .sc-AykKE {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #2a2a2a;
}

.c0:disabled {
  opacity: 0.6;
  color: #f9423a;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="highlight"
  variant="primary"
>
  text
</button>
`;

exports[`Primary Button as "inverse" color variant matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #2a2a2a;
  background-color: #fff;
  border-color: #fff;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .sc-AykKD > div,
.c0:focus :not(:disabled) .sc-AykKD > div {
  background-color: white;
}

.c0:hover :not(:disabled) .sc-AykKE.sc-AykKE,
.c0:focus :not(:disabled) .sc-AykKE.sc-AykKE {
  fill: white;
}

.c0 .sc-AykKD > div {
  background-color: #2a2a2a;
}

.c0 .sc-AykKE {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #2a2a2a;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="inverse"
  variant="primary"
>
  text
</button>
`;

exports[`Secondary Button as "default" color variant matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #2a2a2a;
  background-color: transparent;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .sc-AykKD > div,
.c0:focus :not(:disabled) .sc-AykKD > div {
  background-color: white;
}

.c0:hover :not(:disabled) .sc-AykKE.sc-AykKE,
.c0:focus :not(:disabled) .sc-AykKE.sc-AykKE {
  fill: white;
}

.c0 .sc-AykKD > div {
  background-color: #2a2a2a;
}

.c0 .sc-AykKE {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #2a2a2a;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="default"
  variant="secondary"
>
  text
</button>
`;

exports[`Secondary Button as "highlight" color variant matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #fff;
  background-color: transparent;
  border-color: #fff;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled) .sc-AykKD > div,
.c0:focus :not(:disabled) .sc-AykKD > div {
  background-color: white;
}

.c0:hover :not(:disabled) .sc-AykKE.sc-AykKE,
.c0:focus :not(:disabled) .sc-AykKE.sc-AykKE {
  fill: white;
}

.c0 .sc-AykKD > div {
  background-color: #fff;
}

.c0 .sc-AykKE {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #fff;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="highlight"
  variant="secondary"
>
  text
</button>
`;

exports[`Secondary Button as "inverse" color variant matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #fff;
  background-color: transparent;
  border-color: #fff;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .sc-AykKD > div,
.c0:focus :not(:disabled) .sc-AykKD > div {
  background-color: white;
}

.c0:hover :not(:disabled) .sc-AykKE.sc-AykKE,
.c0:focus :not(:disabled) .sc-AykKE.sc-AykKE {
  fill: white;
}

.c0 .sc-AykKD > div {
  background-color: #fff;
}

.c0 .sc-AykKE {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #fff;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="inverse"
  variant="secondary"
>
  text
</button>
`;

exports[`Small Button in loading state matches snapshot 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  text-align: center;
  margin-top: 8px;
  margin-bottom: 8px;
}

.c1 > div {
  background-color: #f4f4f4;
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 100%;
  display: inline-block;
  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
}

.c1 > div:nth-child(1) {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.c1 > div:nth-child(2) {
  -webkit-animation-delay: -0.15s;
  animation-delay: -0.15s;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: no-drop;
  line-height: 1.25rem;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .c2 > div,
.c0:focus :not(:disabled) .c2 > div {
  background-color: white;
}

.c0:hover :not(:disabled) .sc-AykKE.sc-AykKE,
.c0:focus :not(:disabled) .sc-AykKE.sc-AykKE {
  fill: white;
}

.c0 .c2 > div {
  background-color: #fff;
}

.c0 .sc-AykKE {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #fff;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="default"
  disabled=""
  variant="primary"
>
  <span
    class="c1 c2 "
  >
    <div />
    <div />
    <div />
  </span>
</button>
`;

exports[`Small Button matches snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  font-family: "adelle-sans",sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover :not(:disabled),
.c0:focus :not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:hover :not(:disabled) .sc-AykKD > div,
.c0:focus :not(:disabled) .sc-AykKD > div {
  background-color: white;
}

.c0:hover :not(:disabled) .sc-AykKE.sc-AykKE,
.c0:focus :not(:disabled) .sc-AykKE.sc-AykKE {
  fill: white;
}

.c0 .sc-AykKD > div {
  background-color: #fff;
}

.c0 .sc-AykKE {
  -webkit-transition: fill 0.1s ease-in-out;
  transition: fill 0.1s ease-in-out;
  fill: #fff;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="default"
  variant="primary"
>
  text
</button>
`;
